--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,7 +55,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BallScript.cs" />
+     <Compile Include="Assets\GameManager.cs" />
      <Compile Include="Assets\HelloScript.cs" />
+     <Compile Include="Assets\InputManager.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/home/sky/Dev/PongRemix/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
